--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.thumbs {
+    display: flex;
+    justify-content: center;
+}
+
+.swiper-pagination {
+    position:relative !important;
+}
